--- a/2024.html
+++ b/2024.html
@@ -3,46 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retano | Contacto</title>
+    <title>Marisol Retano | 2024</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="contact-page">
+<body>
 
 <header>
     <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">Marisol Retano</a></div>
     <nav>
         <a href="2026.html">2026</a>
         <a href="index.html">2025</a>
-        <a href="2024.html">2024</a>
+        <a href="2024.html" class="active">2024</a>
         <a href="poesia.html">Poesia +</a>
         <a href="cv.html">CV</a>
         <a href="contacto.html">Contacto</a>
     </nav>
 </header>
 
-<main class="contact-main">
-    <div class="contact-wrapper">
+<main>
+    <section class="gallery">
 
-        <div class="email-section">
-            <p class="intro-text">Para consultas, adquisiciones o colaboraciones:</p>
-
-            <p class="contact-email-text">
-                marisolmrz@icloud.com
-            </p>
-
-            <p class="contact-email-text">
-                marisolretano@hotmail.com
-            </p>
+        <div class="item">
+            <img src="imagenes/obra102.jpg" alt="Obra 102">
+            <div class="overlay">
+                <span>
+                    Sin título<br>
+                    Óleo sobre cartón con tela<br>
+                    12 x 15cm
+                    2024
+                </span>
+            </div>
         </div>
 
-        <div class="social-section">
-            <a href="https://www.instagram.com/agrimpoem/" target="_blank" class="instagram-link">
-                <img src="imagenes/instagram.png" alt="Instagram Retano" class="social-icon">
-            </a>
-            <p class="social-label">Instagram</p>
+        <div class="item">
+            <img src="imagenes/obra101.jpg" alt="Margarita o Antónimo de amarillo">
+            <div class="overlay">
+                <span>
+                    No.5<br>
+                    Margarita o Antónimo de amarillo<br>
+                    Óleo<br>
+                    12.5 x 21.2 cm<br>
+                    2024
+                </span>
+            </div>
         </div>
 
-    </div>
+    </section>
 </main>
 
 <footer>
