--- a/2026.html
+++ b/2026.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retano | 2026</title>
+    <title>Marisol Retano | 2026</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <header>
     <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">Marisol Retano</a></div>
     <nav>
-        <a href="2026.html">2026</a>
+        <a href="2026.html" class="active">2026</a>
         <a href="index.html">2025</a>
         <a href="2024.html">2024</a>
         <a href="poesia.html">Poesia +</a>
@@ -22,29 +22,6 @@
 
 <main>
     <section class="gallery">
-
-        <div class="item">
-            <img src="imagenes/obra201.jpg" alt="Recuerdos de una tarde en silencio n.1">
-            <div class="overlay">
-                <span>
-                    Recuerdos de una tarde en silencio n.1<br>
-                    Óleo sobre imprimación en minagris<br>
-                    18.5 x 11 cm
-                </span>
-            </div>
-        </div>
-
-        <div class="item">
-            <img src="imagenes/obra202.jpg" alt="Recuerdos de una tarde en silencio n.2">
-            <div class="overlay">
-                <span>
-                    Recuerdos de una tarde en silencio n.2<br>
-                    Óleo sobre imprimación en minagris<br>
-                    18.5 x 11 cm
-                </span>
-            </div>
-        </div>
-
     </section>
 </main>
 
@@ -55,9 +32,20 @@
 </footer>
 
 <script>
-    /* Seguridad: Bloqueo de clic derecho y arrastre */
     document.addEventListener('contextmenu', e => e.preventDefault());
     document.addEventListener('dragstart', e => { if (e.target.nodeName === 'IMG') e.preventDefault(); });
+
+    const items = document.querySelectorAll('.item');
+    items.forEach(item => {
+        item.addEventListener('click', function(e) {
+            if (this.classList.contains('active')) {
+                this.classList.remove('active');
+            } else {
+                items.forEach(i => i.classList.remove('active'));
+                this.classList.add('active');
+            }
+        });
+    });
 </script>
 
 </body>
