--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retano | Contacto</title>
+    <title>Marisol Retano | Contacto</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="contact-page">
@@ -16,7 +16,7 @@
         <a href="2024.html">2024</a>
         <a href="poesia.html">Poesia +</a>
         <a href="cv.html">CV</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="contacto.html" class="active">Contacto</a>
     </nav>
 </header>
 
@@ -31,12 +31,12 @@
             </p>
 
             <p class="contact-email-text">
-                marisolretano@hotmail.com
+                tucorreo@hotmail.com
             </p>
         </div>
 
         <div class="social-section">
-            <a href="https://www.instagram.com/agrimpoem/" target="_blank" class="instagram-link">
+            <a href="https://www.instagram.com/TU_USUARIO" target="_blank" class="instagram-link">
                 <img src="imagenes/instagram.png" alt="Instagram Retano" class="social-icon">
             </a>
             <p class="social-label">Instagram</p>
