--- a/cv.html
+++ b/cv.html
@@ -190,7 +190,7 @@
         <div class="cv-row">
             <div class="cv-year"></div>
             <div class="cv-content">
-                Español (Nativo)<br>
+                Español<br>
                 Inglés
             </div>
         </div>
