--- a/2026.html
+++ b/2026.html
@@ -22,6 +22,43 @@
 
 <main>
     <section class="gallery">
+
+        <div class="item item-small">
+            <img src="imagenes/obra202.jpg" alt="Recuerdos de una tarde en silencio n.2">
+            <div class="overlay">
+                <span>
+                    Recuerdos de una tarde en silencio n.2<br>
+                    Óleo sobre imprimación en minagris<br>
+                    11 x 18.5 cm<br>
+                    2026
+                </span>
+            </div>
+        </div>
+
+        <div class="item item-small">
+            <img src="imagenes/obra201.jpg" alt="Recuerdos de una tarde en silencio n.1">
+            <div class="overlay">
+                <span>
+                    Recuerdos de una tarde en silencio n.1<br>
+                    Óleo sobre imprimación en minagris<br>
+                    11 x 18.5 cm<br>
+                    2026
+                </span>
+            </div>
+        </div>
+
+        <div class="item item-small">
+            <img src="imagenes/obra203.jpg" alt="09|01|26">
+            <div class="overlay">
+                <span>
+                    09|01|26<br>
+                    Óleo sobre cartón con tela<br>
+                    12 x 15 cm<br>
+                    2026
+                </span>
+            </div>
+        </div>
+
     </section>
 </main>
 
