--- a/contacto.html
+++ b/contacto.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="social-section">
-            <a href="https://www.instagram.com/TU_USUARIO" target="_blank" class="instagram-link">
+            <a href="https://www.instagram.com/agrimpoem/" target="_blank" class="instagram-link">
                 <img src="imagenes/instagram.png" alt="Instagram Retano" class="social-icon">
             </a>
             <p class="social-label">Instagram</p>
