--- a/2024.html
+++ b/2024.html
@@ -24,7 +24,7 @@
     <section class="gallery">
 
         <div class="item item-large">
-            <img src="imagenes/margarita.jpg" alt="Margarita o Antónimo de amarillo">
+            <img src="imagenes/obra102.jpg" alt="Margarita o Antónimo de amarillo">
             <div class="overlay">
                 <span>
                     No.5<br>
@@ -36,13 +36,73 @@
             </div>
         </div>
 
-        <div class="item">
-            <img src="imagenes/sintitulo.jpg" alt="Sin título">
+        <div class="item item-small">
+            <img src="imagenes/obra101.jpg" alt="Sin título">
             <div class="overlay">
                 <span>
                     Sin título<br>
                     Óleo sobre cartón con tela<br>
                     12 x 15 cm<br>
+                    2024
+                </span>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="imagenes/obra103.jpeg" alt="Exploración de Cadnio">
+            <div class="overlay">
+                <span>
+                    Exploración de Cadnio<br>
+                    Óleo sobre cartón con tela<br>
+                    12 x 15 cm<br>
+                    2024
+                </span>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="imagenes/obra104.jpg" alt="Exploración de ocre">
+            <div class="overlay">
+                <span>
+                    Exploración de ocre<br>
+                    Óleo sobre cartón con tela<br>
+                    12 x 15 cm<br>
+                    2024
+                </span>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="imagenes/obra105.jpg" alt="Sin título">
+            <div class="overlay">
+                <span>
+                    Sin título<br>
+                    Óleo sobre cartón con tela<br>
+                    12 x 15 cm<br>
+                    2024
+                </span>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="imagenes/obra106.jpg" alt="Sin título">
+            <div class="overlay">
+                <span>
+                    Sin título<br>
+                    Óleo sobre cartón con tela<br>
+                    12 x 15 cm<br>
+                    2024
+                </span>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="imagenes/obra107.jpg" alt="Exploración botana n.1">
+            <div class="overlay">
+                <span>
+                    Exploración botana n.1<br>
+                    Óleo<br>
+                    22 x 27 cm<br>
                     2024
                 </span>
             </div>
