--- a/2024.html
+++ b/2024.html
@@ -24,7 +24,7 @@
     <section class="gallery">
 
         <div class="item item-large">
-            <img src="imagenes/obra102.jpg" alt="Margarita o Antónimo de amarillo">
+            <img src="imagenes/obra101.jpg" alt="Margarita o Antónimo de amarillo">
             <div class="overlay">
                 <span>
                     No.5<br>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="item item-small">
-            <img src="imagenes/obra101.jpg" alt="Sin título">
+            <img src="imagenes/obra102.jpg" alt="Sin título">
             <div class="overlay">
                 <span>
                     Sin título<br>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="item">
-            <img src="imagenes/obra103.jpeg" alt="Exploración de Cadnio">
+            <img src="imagenes/obra103.jpg" alt="Exploración de Cadnio">
             <div class="overlay">
                 <span>
                     Exploración de Cadnio<br>
